# odbc_web_crud

./: 404.html  Cargo.toml  README.md  data.json  hello.html
src/: main.rs  myodbc.rs  odbc.rs
