[package]
name = "odbc_web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
local-ip-address = "0.6.1"
odbc = "0.17.0"
serde_json = "1.0.85"
serde = { version = "1.0.145", features = ["derive"] }

[dependencies.async-std]
 version = "1.6"
 features = ["attributes"]
 

